# ElysiumVanguard-FileManager

./: .gitignore  README.md  build.gradle.kts  gradle.properties  rust-toolchain.toml  settings.gradle.kts
.ai/: AGENTS.md  README.md  STANDARDS.md
.github/workflows/: nightly.yml  pr.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
docs/: IMPLEMENTATION_PLAN.md  PRIVACY_POLICY.md
docs/adr/: ADR-001-runtime-backend-abstraction.md  ADR-002-pty-terminal-renderer.md  ADR-003-elysium-linux-identity.md  ADR-003-elysium-vanguard-linux-derivation.md  ADR-004-rootfs-signing-and-update-model.md  ADR-004-rootfs-verification-chain.md  ADR-005-application-capsules.md  ADR-005-x11-display-protocol.md  ADR-006-filesystem-bridge.md  ADR-006-network-enforcement-pure-jvm.md  ADR-007-distro-provisioning-pipeline.md  ADR-007-winlayer-architecture.md  ADR-008-hardware-broker-pure-jvm.md  ADR-008-virtualization-backend.md  ADR-009-hardware-broker-capability-framework.md  ADR-009-hardware-enforcer-service.md  ADR-010-android-hardware-enforcer.md  ADR-010-application-capsule-format.md  ADR-011-hardware-hilt-wiring.md  ADR-011-security-model.md  ADR-012-observability-and-diagnostics.md  ADR-012-windows-vm-layer.md  ADR-013-qemu-production-backend.md  ADR-013-remote-runtime-backend.md  ADR-014-compatibility-matrix-and-testing-policy.md  ADR-014-workspaces.md  ADR-015-observability.md  (+25 more)
native/runtime/: Cargo.toml  build-android.sh  build.rs
native/runtime/src/: lib.rs  spawn_shim.c  spawn_shim.h
tools/: build-elysium-linux.sh  test-build-elysium-linux.sh  validate-capsule.sh
(+1230 files in other folders)
