[package]
name = "elysium-runtime"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "elysium_runtime"
crate-type = ["cdylib", "rlib"]

[dependencies]
jni = { version = "0.21.1", default-features = false }
libc = "0.2.180"

[build-dependencies]
cc = "1.2.55"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
